Fix landing spacing

--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -135,7 +135,7 @@ body {
 
 .row {
   margin-top: 100px;
-  margin-bottom: -10%;
+  margin-bottom: -40px;
 }
 
 .ui.segment p {
